--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,28 +1,23 @@
-name: Build & Push Docker image
+name: Build and Test Docker
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: "20" }
-      - run: npm ci
-      - run: npm run build
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tpk3d:latest
+
+      - name: Build Docker image
+        run: |
+          docker build -t tpk3d:test .
+
+      - name: Run container and smoke-test
+        run: |
+          docker run -d --name tpk3d-smoke -p 8080:80 tpk3d:test
+          sleep 5
+          curl -f http://localhost:8080 || (docker logs tpk3d-smoke && exit 1)
+          docker stop tpk3d-smoke
