--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Show file tree
+        run: ls -R .
+
       - name: Build Docker image
         run: docker build -t tpk3d:test .
 
